include_directories(../include)
include_directories(../c/include)

file(GLOB examples_src_cpp_files *.cpp)
foreach(file ${examples_src_cpp_files})
    set(file_name ${file})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
    project(${file_name})
    add_executable(${file_name} ${file})
    target_link_libraries(${file_name} ${PGBN_STATIC_LIB})
endforeach(file)

file(GLOB examples_src_c_files *.c)
foreach(file ${examples_src_c_files})
    set(file_name ${file})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
    project(${file_name}_C "C")
    add_executable(${file_name}_C ${file})
    target_link_libraries(${file_name}_C ${PGBN_C_STATIC_LIB} ${PGBN_STATIC_LIB} ${STD_CXX_LIB})
endforeach(file)
